# dbrowse

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  database.py  main.py  pyproject.toml  requirements.txt  ui.py  update_checker.py  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
Formula/: dbrowse.rb
docs/: README.md  SCREENSHOTS.md
scripts/: README.md  create_release.sh  create_test_db.py  get_sha256.sh
